home page updated

--- a/todo
+++ b/todo
@@ -4,6 +4,9 @@ todo
 	1.2 改格式
 2. formal 加自我介绍
 3. 加 contact me 页面
+4. 最好一上来让用户点一下鼠标就可以看明白你这个东西怎么玩
+例如用户选了GREETING里的NO.1
+你所有里面的NO.1就全自动出来了，这样一眼看上去半封信就已经完成了
 
 
 done
